--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,11 @@
+@import "cursor.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    html {
+        cursor: none;
+    }
+}
