feat(footer): make footer stay at bottom

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,4 +8,11 @@
     html {
         cursor: none;
     }
+
+    html,
+    body,
+    body > div:first-child,
+    div#__next {
+        height: 100%;
+    }
 }
