feat: add more translations and wordpress base style

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
 @import "backgrounds.css";
 @import "fontiran.css";
 @import "404.css";
+@import "wordpress-base.css";
 
 @tailwind base;
 @tailwind components;
