--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -1,8 +1,38 @@
+@import "fontiran.css";
+
 @tailwind base;
 
 @tailwind components;
 
 @tailwind utilities;
+
+html {
+    cursor: none;
+}
+
+.avatar-shadows {
+    box-shadow: #ffe9ce 135px -46px 0 -81px, rgb(250 189 37) 25px 89px 0 -22px, rgb(249 132 94) -41px -3px 0 30px
+}
+
+.blog-shadows-right {
+    box-shadow: #ffe9ce 135px -46px 0 -81px, rgb(250 189 37) 25px 89px 0 -22px, rgb(249 132 94) 45px -3px 0 30px
+}
+
+.blog-shadows-left {
+    box-shadow: #ffe9ce -87px -44px 0 -85px, rgb(250 189 37) 31px 37px 0 -25px, rgb(249 132 94) -15px -3px 0 12px
+}
+
+.text-gradient {
+    @apply text-transparent bg-clip-text bg-gradient-to-br from-yellow-400 to-red-400
+}
+
+.cursor {
+    @apply w-6 h-6 rounded-full fixed pointer-events-none
+    transform -translate-x-1/2 -translate-y-1/2 duration-300;
+    transition: transform 100ms ease-in-out,
+    background-color 100ms ease-in-out,
+    opacity 100ms ease-in-out;
+}
 
 #___gatsby, #gatsby-focus-wrapper {
     min-height: 100vh;
