--- a/styles/base.css
+++ b/styles/base.css
@@ -1,55 +1,65 @@
-.single-post, .single-post.accordion {
-    @apply space-y-8
+.single-post {
+    @apply space-y-10 antialiased
 }
 
-.single-post > ul {
-    @apply my-5 mx-auto list-disc list-inside;
+.single-post .accordion > div:last-child {
+    @apply space-y-5
+}
+
+.single-post ul, .single-post ol {
+    @apply list-none space-y-4;
+}
+
+.single-post ul li {
+    @apply relative pr-5
+}
+
+.single-post ul li:before {
+    content: "";
+    @apply inline-block w-1 h-1 rounded-full bg-gray-500 absolute right-0 top-1/2 transform -translate-y-1/2
+    /*@apply list-disc list-inside;*/
 }
 
 .single-post a {
     @apply underline font-semibold;
 }
 
+.single-post em {
+    @apply text-yellow-600;
+}
+
+.single-post code {
+    @apply not-italic bg-gray-400 p-1 rounded text-black mx-1;
+    font-family: "JetBrains Mono", serif;
+}
+
 .single-post img {
     @apply w-full rounded;
 }
 
-.single-post > ol {
-    @apply mx-auto list-decimal list-inside;
+.single-post ol {
+    @apply list-decimal list-inside;
 }
 
 .single-post blockquote {
-    @apply border-l-8 pl-10 mx-auto my-10 font-light text-gray-900 text-opacity-75;
+    @apply border-l-8 pl-10 mx-auto  font-light text-gray-900 text-opacity-75;
 }
 
 .single-post hr {
-    @apply my-10;
+    @apply border-gray-900 dark:border-gray-100 rounded;
 }
 
 .single-post h1 {
-    @apply my-10 text-4xl font-bold mx-auto;
+    @apply text-3xl font-bold mx-auto;
 }
 
 .single-post h2 {
-    @apply my-10 text-3xl mx-auto;
+    @apply text-2xl mx-auto;
 }
 
 .single-post h3 {
-    @apply my-10 text-3xl mx-auto;
+    @apply text-xl mx-auto;
 }
-
-.single-post h4 {
-    @apply my-10 text-2xl mx-auto;
-}
-
-.single-post h5 {
-    @apply my-10 text-xl mx-auto;
-}
-
-.single-post h6 {
-    @apply my-10 text-xl mx-auto;
-}
-
 
 /* Wordpress block gallery */
 
