feat(blog): add edit post button

--- a/styles/base.css
+++ b/styles/base.css
@@ -11,12 +11,12 @@
 }
 
 .single-post ul li {
-    @apply relative pr-5
+    @apply relative ltr:pl-5 rtl:pr-5
 }
 
 .single-post ul li:before {
     content: "";
-    @apply inline-block w-1 h-1 rounded-full bg-gray-500 absolute right-0 top-1/2 transform -translate-y-1/2
+    @apply inline-block w-1 h-1 rounded-full bg-gray-500 absolute ltr:left-0 rtl:right-0 top-1/2 transform -translate-y-1/2
     /*@apply list-disc list-inside;*/
 }
 
@@ -29,7 +29,7 @@
 }
 
 .single-post code {
-    @apply not-italic bg-gray-400 p-1 rounded text-black mx-1;
+    @apply not-italic bg-gray-400 p-0.5 rounded text-black mx-1;
     font-family: "JetBrains Mono", serif;
 }
 
