--- a/styles/base.css
+++ b/styles/base.css
@@ -6,12 +6,16 @@
     @apply space-y-5
 }
 
-.single-post p {
+.single-post p, .single-post li {
     @apply leading-loose
 }
 
 .single-post ul, .single-post ol {
     @apply list-none space-y-4;
+}
+
+.single-post ul ol, .single-post ul ul,.single-post ol ul, .single-post ol ol {
+    @apply ltr:pl-8 rtl:pr-8 mt-5
 }
 
 .single-post ul li {
